--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -210,6 +210,25 @@
           <img src="./assets/max.jpg" />
         </div>
         <span>By MAX GOODBOYE</span>
+      </div>
+    </div>
+
+    <div class="card" data-tab="technology">
+      <div class="headline">TECHNOLOGY!!!</div>
+      <div class="author">
+        <div class="img-container">
+          <img src="./assets/max.jpg" />
+        </div>
+        <span>By Mr. Tech No Logy</span>
+      </div>
+    </div>
+    <div class="card" data-tab="javascript">
+      <div class="headline">What does javascript have to do with coffee?</div>
+      <div class="author">
+        <div class="img-container">
+          <img src="./assets/max.jpg" />
+        </div>
+        <span>By COFFEE</span>
       </div>
     </div>
 
